to stop overflow, giving no height to the container

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ a:active {
 }
 
 .leftcontainer {
-    height: 70rem;
+    /* height: 70rem; */
     width: 48%;
     border: 2px solid #cef2e0;
     margin-right: 10px;
@@ -101,7 +101,7 @@ a:active {
 }
 
 .rightcontainer {
-    height: 70rem ;
+    /* height: 70rem ; */
     width: 48%;
     border: 2px solid #cedff2;
     margin-left: 10px;
